include pflome gui in its own file

--- a/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
@@ -101,7 +101,7 @@ Normalizing this gives us the total expected waiting time in this state for the
 mosquito is exponential with intensity $(1-p) \lambda$.
 
 As a note, this convergence is uniform as it is the Taylor series representation
-of the exponential function - this justifies summing the infinite equations and
+of the exponential function - this justifies interchanging the infinite summation and
 the differential operator which gives us
 
 $$\frac{d}{dt} \sum_{i=1}^{\infty} x_i = \sum_{i=1}^{\infty}\frac{d x_i}{dt}$$
