--- a/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
@@ -256,7 +256,7 @@ F_{x}(a,t)}{\partial a} =&
 - \gamma_F(a,t) F_{x}(a,t)\\
 %
 %
-\frac{\partial B_{o,x}(a,t)}{\partial t} + \frac{\partial
+\frac{\partial B_{x}(a,t)}{\partial t} + \frac{\partial
 B_{x}(a,t)}{\partial a} =&  \xi_O(a,t) P_{OB}(a) O_x(a,t) +
 \xi_F(a,t) P_{FB}(a) F_x(a,t)\\ &
 + \xi_R(a,t) P_{RB}(a) R_x(a,t) 
@@ -269,7 +269,7 @@ L_{x} (a,t)}{\partial a} =& \xi_R(a,t) P_{RL}(a) R_x(a,t) +
 - \gamma_L(a,t) L_{x}(a,t)
 \\
 %
-\frac{\partial O_{o,x}(a,t)}{\partial t} + \frac{\partial
+\frac{\partial O_{x}(a,t)}{\partial t} + \frac{\partial
 O_{x}(a,t)}{\partial a} =& \xi_L(a,t) P_{LO}(a) L_x(a,t)
 + \xi_R(a,t) P_{RO}(a) R_x(a,t)
 \\&
